--- a/JobFinder/appsettings.json
+++ b/JobFinder/appsettings.json
@@ -7,14 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:jobfinderserverefedemirtas.database.windows.net,1433;Initial Catalog=JobFinderDb;Persist Security Info=False;User ID=sqladmin;Password=EfeSuper2025!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "<YOUR_…>"
   },
   "ServiceBus": {
-    "ConnectionString": "Endpoint=sb://jobfinderbus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=KSz7I90lvZsu0K77PxuZagYRY4NcS8BqN+ASbNfSiFM=",
+    "ConnectionString": "<YOUR_…>",
     "QueueName": "jobcreatedqueue"
   },
   "Redis": {
-    "ConnectionString": "jobfinderredis.redis.cache.windows.net:6380,password=pzFpya9QwfEns1zAxYSaDvAcTnxKhDUzEAzCaJ5gars=,ssl=True,abortConnect=False"
+    "ConnectionString": "<YOUR_…>"
   }
 
 }
